--- a/package.json
+++ b/package.json
@@ -11,13 +11,18 @@
   },
   "author": "Diego Sullon",
   "license": "ISC",
-  "dependencies": {},
+  "dependencies": {
+    "cannon": "^0.6.2",
+    "three": "^0.130.1"
+  },
   "devDependencies": {
     "@babel/core": "^7.14.6",
     "@babel/preset-env": "^7.14.7",
     "babel-loader": "^8.2.2",
+    "css-loader": "^5.2.6",
     "html-webpack-plugin": "^5.3.2",
     "standard": "^16.0.3",
+    "style-loader": "^3.0.0",
     "webpack": "^5.42.1",
     "webpack-cli": "^4.7.2",
     "webpack-dev-server": "^3.11.2"
